✨Feat :  add Kafka event message classes
Change-Id: I1ba3ad33574f32e729155aa932dc409a2e257417