@@ -1,24 +1,20 @@
 package com.edgescheduler.notificationservice.config;
 
-import com.edgescheduler.notificationservice.config.deserializer.NotificationJsonDeserializer;
-import com.edgescheduler.notificationservice.config.deserializer.NotificationJsonSerializer;
-import com.edgescheduler.notificationservice.dto.NotificationMessage;
-import java.util.Collections;
+import com.edgescheduler.notificationservice.config.deserializer.MessageJsonDeserializer;
+import com.edgescheduler.notificationservice.message.EventMessage;
+import java.util.List;
 import java.util.Map;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.kafka.clients.admin.NewTopic;
 import org.apache.kafka.clients.consumer.ConsumerConfig;
-import org.apache.kafka.clients.producer.ProducerConfig;
-import org.apache.kafka.common.serialization.StringSerializer;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.autoconfigure.kafka.KafkaProperties;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.kafka.annotation.EnableKafka;
 import org.springframework.kafka.config.TopicBuilder;
+import org.springframework.kafka.core.KafkaAdmin.NewTopics;
 import org.springframework.kafka.core.reactive.ReactiveKafkaConsumerTemplate;
 import org.springframework.kafka.core.reactive.ReactiveKafkaProducerTemplate;
-import org.springframework.kafka.support.serializer.JsonSerializer;
 import reactor.kafka.receiver.ReceiverOptions;
 import reactor.kafka.sender.SenderOptions;
 
@@ -27,42 +23,52 @@ import reactor.kafka.sender.SenderOptions;
 @EnableKafka
 public class KafkaConfig {
 
-    @Value("${KAFKA_NOTIFICATION_TOPIC:notification}")
-    private String topic;
+    @Value("${kafka.topic.meeting-created}")
+    private String meetingCreatedTopic;
+    @Value("${kafka.topic.meeting-deleted}")
+    private String meetingDeletedTopic;
+    @Value("${kafka.topic.meeting-updated}")
+    private String meetingUpdatedTopic;
+    @Value("${kafka.topic.attendee-response}")
+    private String attendeeResponseTopic;
+    @Value("${kafka.topic.attendee-proposal}")
+    private String attendeeProposalTopic;
 
     @Bean
-    public NewTopic notification() {
-        return TopicBuilder.name(topic)
-            .partitions(3)
-            .replicas(1)
-            .build();
+    public NewTopics notification() {
+        return new NewTopics(
+            TopicBuilder.name(meetingCreatedTopic).partitions(3).replicas(2).build(),
+            TopicBuilder.name(meetingDeletedTopic).partitions(3).replicas(2).build(),
+            TopicBuilder.name(meetingUpdatedTopic).partitions(3).replicas(2).build(),
+            TopicBuilder.name(attendeeResponseTopic).partitions(3).replicas(2).build(),
+            TopicBuilder.name(attendeeProposalTopic).partitions(3).replicas(2).build()
+        );
+
     }
 
     @Bean
-    public ReactiveKafkaProducerTemplate<String, NotificationMessage> producerTemplate(
+    public ReactiveKafkaProducerTemplate<String, EventMessage> producerTemplate(
         KafkaProperties properties
     ) {
         Map<String, Object> producerProperties = properties.buildProducerProperties();
-        producerProperties.putAll(Map.of(
-            ProducerConfig.VALUE_SERIALIZER_CLASS_CONFIG, NotificationJsonSerializer.class));
-        log.info("Producer properties: {}", producerProperties);
-        SenderOptions<String, NotificationMessage> senderOptions = SenderOptions.create(
+        SenderOptions<String, EventMessage> senderOptions = SenderOptions.create(
             producerProperties);
         return new ReactiveKafkaProducerTemplate<>(senderOptions);
     }
 
     @Bean
-    public ReactiveKafkaConsumerTemplate<String, NotificationMessage> consumerTemplate(
+    public ReactiveKafkaConsumerTemplate<String, EventMessage> consumerTemplate(
         KafkaProperties properties
     ) {
         Map<String, Object> consumerProperties = properties.buildConsumerProperties();
         consumerProperties.put(ConsumerConfig.VALUE_DESERIALIZER_CLASS_CONFIG,
-            NotificationJsonDeserializer.class);
+            MessageJsonDeserializer.class);
         log.info("Consumer properties: {}", consumerProperties);
-        ReceiverOptions<String, NotificationMessage> receiverOptions = ReceiverOptions.create(
+        ReceiverOptions<String, EventMessage> receiverOptions = ReceiverOptions.create(
             consumerProperties);
         receiverOptions = receiverOptions.subscription(
-            Collections.singletonList(topic));
+            List.of(meetingCreatedTopic, meetingDeletedTopic, meetingUpdatedTopic,
+                attendeeResponseTopic, attendeeProposalTopic));
         return new ReactiveKafkaConsumerTemplate<>(receiverOptions);
     }
 }
